# sm-shell

./: .gitignore  Notes.md  README.md  header-template.txt
docs/: Readme.md
includes/: smshell.h
src/: CMakeLists.txt  Makefile  redirections.c  sm-pipes.c  smshell  smshell.c  smshell.h  smutils.h
